# katsu

./: Cargo.toml
migrations/2022-03-07-221114_create_post/: up.sql
migrations/2022-03-07-221114_create_tweets/: down.sql  up.sql
migrations/2022-03-09-190807_create_user/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs  template.rs
templates/: index.stpl  login.stpl  register.stpl
