[package]
name = "katsu"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.4"
eyre = "0.6"
fehler = "1.0"
dotenv = "0.15"
sailfish = "0.3"
serde_json = "1.0"
async-trait = "0.1"
rust-argon2 = "1.0"
tower-cookies = "0.5"
diesel_migrations = "1.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
diesel = { version = "1.4", default_features = false, features = ["sqlite", "r2d2"] }

